overflow1 fixed

--- a/src/Components/payment.css
+++ b/src/Components/payment.css
@@ -3,10 +3,11 @@
     box-sizing: border-box;
     display: flex;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     display: flex;
     box-sizing: border-box;
+    margin-bottom: 3%;
 }
 
 
